web-ui/app/scss/styles.scss
@import "compass/css3";
@import "colors";
@import "mixins";
@import "alerts";
@import "read";
@import "reply";
@import "compose";
@import "security";


#logo {
  color: #FFF;
}

#logout {
  color: #FFF;
}

.search-highlight {
  background-color: $search-highlight;
}

#user-settings-box {
  position: absolute;
  left: 20px;
  bottom: 10px;
  z-index: 1;
  padding: 20px;
  background-color: rgba(#3E3A37, 0.9);

  h1, i {
    font-size: 1.6em;
    color: white;
  }

  i {
    margin-left: 10px;
    float: right;
    cursor: pointer;
  }

  p {
    font-size: 1.2em;
    color: #FF9C00;
  }
}

#user-settings-box.extra-bottom-space {
  bottom: 28px;
}

.arrow-box:before {
  right: 100%;
  top: 65%;
  border: 20px solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
  border-right-color: rgba(#3E3A37, 0.9);
  margin-top: -20px;
}

@mixin list-actions {
  #list-actions {
    width: 100%;
    height: 34px;
    margin: 0;
    border-top: 1px solid #FFF;
    border-bottom: 2px solid lighten($top_pane, 30%);
    background: $top_pane;
    clear: both;
    overflow: hidden;
    li {
      display: inline-block;
      margin: 1px -3px;
      vertical-align: top;
      input[type=checkbox] {
        @include check-box;
        margin: 7px 13px 7px;
      }
      select {
        padding: 1px 3px;
        margin: 0;
      }
      input[type=button] {
        margin: 2px;
        padding: 4px 10px;
        background: lighten($contrast, 70%);
        color: #333;
        text-transform: uppercase;
        font-weight: 400;
        font-size: 0.8em;
        opacity: 0.7;
        border: 1px solid darken($contrast, 10%);
        @include border-radius(1px);
        @include btn-transition;
        &:hover {
          opacity: 1;
        }
        &[disabled=disabled] {
          opacity: 0.5;
          cursor: default;
        }
      }
    }

    #pagination-trigger {
      cursor: pointer;
      margin: 4px 12px 0 5px;

      span {
        padding-left: 5px;
      }
    }
  }
}

@mixin email-list {
  ul#mail-list {
    clear: both;
    li {
      height: 66px;
      position: relative;
      padding: 8px 10px 10px 10px;
      background: $contrast;
      border-bottom: 1px solid white;
      cursor: pointer;
      font-weight: bold;
      transition: background-color 150ms ease-out;
      span {
        display: inline-block;
        vertical-align: top;
        &:last-child {
          width: 92%;
        }
        input[type=checkbox] {
          @include check-box;
          margin-right: 2px;
        }
        a {
          color: #333;
          display: block;
          height: 62px;
          margin-top: -8px;
          padding-top: 3px;
          width: 106%;
        }
      }
      .subject-and-tags {
        display: block;
        width: 90%;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
        @include tags;
        ul.tags {
          display: block;
          line-height: 1.2;
          margin: -3px 0 0 0;
          li {
            font-size: 0.6rem;
            background-color: lighten($action_buttons, 12);
            color: white;
            display: inline-block;
            height: auto;
            font-weight: 400;
            border: none;
            &.tag:hover {
              text-decoration: none;
            }
          }
        }

        i.fa-pencil, i.fa-trash-o {
            color: $indicator_icon_color;
        }
      }

      .received-date, .sent-date {
        position: absolute;
        right: 10px;
        font-size: 0.7em;
      }

      .attachment-indicator {
        margin: 2px 0 0 25px;
        font-size: initial;

        i.fa-paperclip {
            color: $indicator_icon_color;
        }
      }
      .from {
        white-space: nowrap;
        font-size: 0.8em;
        width: 80%;
        overflow: hidden;
        text-overflow: ellipsis;
      }

      &.status-read {
        a {
          font-weight: normal;
          color: #555;
        }
      }
      &:hover {
        background: darken($contrast, 5%);
      }
      &.selected {
        background: #FFF;
        z-index: 3;
        a {
          color: #333;
        }
      }
    }
  }
}

@mixin mail-count($bg_color) {
  background: $bg_color;
  color: #FFF;
  padding: 2px 5px;
  font-size: 0.7em;
  margin-left: 5px;
  font-weight: 700;
  position: relative;
  @include border-radius(100px);
}
/* ... */

